--- a/views/Extra.html
+++ b/views/Extra.html
@@ -74,7 +74,7 @@
           </div>
       <div class="col border">
         <article>
-          <h2 class="animate__animated animate__shakeY animate__delay-2s">CONSEJOS PARA UNA BUENA ALIMENTACION DE TU MASCOTA</h2>
+          <h2 class="animate__animated animate__shakeY animate__delay-2s">ADS</h2>
         </article>
         <article>
             <h3> ADS</h3>
