--- a/views/ayuda.html
+++ b/views/ayuda.html
@@ -12,7 +12,7 @@
 </head>
 <body>
    
-        <header class="border">
+        <header class="">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="./index.html">INICIO</a>
@@ -49,61 +49,98 @@
         <a href="../index.html"><img src="./img/descarga.jpg" alt="" ></a>
     </article>
  
-    
     <div>
-        <div class="row">
-            <div class="card col border">
-                <h3>PREGUNTAS FRECUENTES</h3>
-                
-                <div class="card-body">
-                  <h5 class="card-title">YOUR PET</h5>
-                  <p class="card-text"><ul>
+      <div class="row">
+        <div class="card col border">
+          <h3>PREGUNTAS FRECUENTES</h3>
+          
+          <div class="card-body">
+            <h5 class="card-title">YOUR PET</h5>
+            <p class="card-text">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">NUEMRO</th>
+                    <th scope="col">PREGUNTAS FRECUENTES </th>
                     
-                    <li>PREGUNTA 1</li>
-                    <li>PREGUNTA 2</li>
-                    <li>PREGUNTA 3</li>
-                    <li>PREGUNTA 4</li>
-        
-                </ul></p>
-                </div>
-              </div>
-          <div class="col border">
-             <aside class="border">
-                 <main class="form-signin">
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>¿CUANTO ALIMENTO REQUIERE TU PERRO?</td>
                     
-                   </main>
-                 <article>
-                    <h3>1: CUANTO ALIMENTO REQUIERE TU PERRO:</h3>
-                   
-                    <table class="container" border=3 cellpadding=20 cellpacing=5>
-                       <tr>
-                           <th>MAS DE 40 KG</th>
-                           <th>ENTRE 30 Y 40 KG</th>
-                           <th>MENOS DE 30KG</th>
-               
-                       </tr>
-               <td>CUATRO TAZAS</td>        
-               <td>TRES TAZAS</td>            
-               <td>DOS TAZAS</td>       
-                    </table>
-                    </article>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>¿CUANTAS VECES AL DIA DEBO ALIMENTARLO?</td>
+                 
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td colspan="2">¿PUEDO DARLE LAS SOBRAS DE LAS COMIDAS?</td>
+                    
+                </tbody>
+              </table>
+          </div>
+        </div>
+        <div class="col border">
+           <aside class="border">
+            <div class="row">
             
-                    <article>
-                        <h2>ADS</h2>
-                    </article>
-                    <article>
-                        <h2>ADS</h2>
-                    </article>
-                    <article>
-                        <h2>ADS</h2>
-                    </article>
-                
+              <div class="col border">
+                <aside>
+                  <div class="row">
+           
+                    <div class="col border">
+                       <aside class="border">
+                           <main class="form-signin">
+                              
+                             </main>
+                           <article>
+                              <h3>1: CUANTO ALIMENTO REQUIERE TU PERRO:</h3>
+                             
+                              <table class="container" border=3 cellpadding=20 cellpacing=5>
+                                 <tr>
+                                     <th>MAS DE 40 KG</th>
+                                     <th>ENTRE 30 Y 40 KG</th>
+                                     <th>MENOS DE 30KG</th>
+                         
+                                 </tr>
+                         <td>CUATRO TAZAS</td>        
+                         <td>TRES TAZAS</td>            
+                         <td>DOS TAZAS</td>       
+                              </table>
+                              </article>
+                      
+                              <article>
+                                  <h2>ADS</h2>
+                              </article>
+                              <article>
+                                  <h2>ADS</h2>
+                              </article>
+                              <article>
+                                  <h2>ADS</h2>
+                              </article>
+                          
+                             
+                           <article class="tituloarticlefooter">&copy; TODOS LOS DERECHOS RESERVADOS &reg; YOUR PET</article>
+                       </aside>                     
+                  </div>
+                  </div>
                    
-                 <article class="tituloarticlefooter">&copy; TODOS LOS DERECHOS RESERVADOS &reg; YOUR PET</article>
-             </aside>                     
-        </div>
-        </div>
-   </div>
+               
+                  
+            
+        
+           
+                 
+               
+      </div>
+      </div>
+    </div>
+    
+    
     
     
    <footer class=" b-example-divider bi">
