--- a/views/contacto.html
+++ b/views/contacto.html
@@ -86,14 +86,21 @@
                     </article>
                         
   
-     </div>
+                </div>
                     </div>
                   </div>
               <div class="col border">
                 <h3 class="animate__animated animate__shakeY animate__delay-2s">CONSEJOS PARA UNA BUENA ALIMENTACION DE TU MASCOTA</h3>
-                <article>
-                    <h2>ADS</h2>
-                </article>
+                <div class="card">
+                  <div class="card-header">
+                   CONTACTATE POR WHATSAPP
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">Hace click en el boton</h5>
+                    <p class="card-text">Una asesora de ventas te atendera</p>
+                    <a href="https://web.whatsapp.com/" class="btn btn-primary">Whatsapp</a>
+                  </div>
+                </div>
                 <article>
                     <h2>ADS</h2>
                 </article>
