--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -49,10 +49,7 @@
         <a href="../index.html"><img src="./img/descarga.jpg" alt="" ></a>
     </article>
     </section>
-    <div class="container">
-   
-       
-   </div>
+
 
 
               
@@ -70,7 +67,7 @@
                         <aside class="border">
                             <main class="form-signin">
                                 <form>
-                                  <h1 class="h3 mb-3 fw-normal animate__animated animate__backInUp">INGRESO STAFF</h1>
+                                  <h1 class="h3 mb-3 fw-normal animate__animated animate__backInUp">INGRESO MIEMBROS <span class="badge bg-secondary">New</span></h1>
                               
                                   <div class="form-floating">
                                     <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
