--- a/views/ubicacion.html
+++ b/views/ubicacion.html
@@ -11,7 +11,7 @@
 
 </head>
 <body >
-    <header class="border">
+    <header class="">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="./index.html">INICIO</a>
@@ -46,52 +46,61 @@
     <a href="../index.html"><img src="./img/descarga.jpg" alt="" ></a>
 </article>
 
-<div >
-    <div class="row">
-        <div class="card col border">
-          
-            <div class="card-body">
-              <h3 class="card-title animate__animated animate__wobble">DIRECCION</h3>
-              <div class="card-body">
-                
-                <p class="card-text"> <h3>Encontranos</h3></p>
-             <article>
-                <div class="">
-                    <div class="row">
-                      <div class="col">
+<div>
+  <div class="row">
+      <div class="card col border">
+          <img src="https://place-puppy.com/300x303" class="card-img-top" alt="...">
+        
+          <div class="card-body">
+            <h5 class="card-title">DIRECCION</h5>
+            <p class="card-text">BUSCANOS EN GOOGLE MAPS</p>
+          </div>
+          <div class="col">
                        
                         
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3350.541801598844!2d-68.85669848453291!3d-32.883840580939946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e085559a117b5%3A0x2614f0a11dbb7a2!2sPaso%20de%20los%20Andes%201398%2C%20Mendoza!5e0!3m2!1ses!2sar!4v1640826434518!5m2!1ses!2sar" width="230" height="115" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                      
-                       
-                      </div>
-                     
-                     
-                    </div>
-                  </div>
-              
-            </article>
-                
-            
-</div>
-            </div>
-          </div>
-      <div class="col border">
-        <aside>
-            <h3>Numeros de contacto</h3>
-            <article>
-                <h3>2613232323</h3>
-            </article> 
-            <article>
-                <h3>2616161616</h3>
-            </article>
-       
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3350.541801598844!2d-68.85669848453291!3d-32.883840580939946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e085559a117b5%3A0x2614f0a11dbb7a2!2sPaso%20de%20los%20Andes%201398%2C%20Mendoza!5e0!3m2!1ses!2sar!4v1640826434518!5m2!1ses!2sar" width="230" height="115" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
           
-        <article class="tituloarticlefooter">&copy; TODOS LOS DERECHOS RESERVADOS &reg; YOUR PET</article>                   
-    </aside>
+           
+          </div>
+        </div>
+    <div class="col border">
+       <aside class="border">
+        <div class="row">
+        
+          <div class="col border">
+            <aside>
+                <h3>Numeros de contacto</h3>
+                <article>
+                    <h3>2613232323</h3>
+                </article> 
+                <article>
+                    <h3>2616161616</h3>
+                </article>
+           
+              
+        
+    
+        </div>
+        </div>
+           <article>
+               <h2>ADS</h2>
+           </article>
+           <article>
+               <h2>ADS</h2>
+           </article>
+           <article>
+               <h2>ADS</h2>
+           </article>
+          
+             
+           <article class="tituloarticlefooter">&copy; TODOS LOS DERECHOS RESERVADOS &reg; YOUR PET</article>
+       </aside>                     
+  </div>
+  </div>
+</div>
 
-    </div>
-    </div>
+<div >
+   
     </div>
 
        
